css/main_style.css
/*
Colorbline safe color palatte from colorbrewer2.org.
#d7191c - red
#fdae61 - tan
#ffffbf - off white
#abd9e9 - light blue
#2c7bb6 - blue
*/

/* note to grader: it hurt to move comments from next to each declaration */
/*                 to above each declaration :( */

/* body sets styling for page content */
body {
  /* set background color to light blue */
  background-color: #abd9e9;
  /* set text color to blue */
  color: #2c7bb6;
  /* center text */
  text-align: center;
}

/* ul sets styling for ordered list elements */
ol {
  /* hoping to indent ordered list elements -
  not working; the research-interests selector may be overriding */
  padding-left: 20px;
}

/* h1 used in header */
h1 {
  /* set text color to off white */
  color: #ffffbf;
  /* expands the vertical size of header */
  padding: 5px;
  /* positions header to directly abut the body */
  margin: 0;
}

/* body-content is unique selector for most of the webpage content */
#body-container {
  /* set background color to off white */
  background-color: #ffffbf;
  /* insures body is narrower than most desktop computer screens*/
  max-width: 1000px;
  /* margin: auto; centers body */
  margin: auto;
  /* sets body height to 100% of viewport */
  height: 100vh;
  /* sets narrow border to off white */
  border: 2px solid #ffffbf;
  /* rounds edges of border */
  border-radius: 25px;
  /* hides content that does not fit in body */
  overflow: hidden;
}

/* header is the unique selector for the bar across the top of the page */
#header {
  /* sets background of header to blue */
  background-color: #2c7bb6;
}

/* profile-picture is the unique selector for the photo element */
#profile-picture {
  /* positions profile pic to the left */
  float: left;
  padding-left: 25px;
  padding-top: 35px;
}

/* welcome-text is the unique selector for the 1st block right of profile */
#welcome-text {
  /* provides 'white space' above welcome-text */
  padding-top: 25px;
  /* sets welcome-text text size */
  font-size: 25px;
}

/* unique selector for the 2nd block to the right of profile pic */
#research-interests {
  /* prevents staggered list elements */
  text-align: left;
  /* matches welcome-text text size */
  font-size: 25px;
  /* prevents overlap of elements */
  position: relative;
  /* 120px  - aligns text horizontally with welcome-text ;
  did not work with Safari*/
  /* left: 120px; */
  /* aligns test with welcome-text - works w Chrome & Safari */
  padding-left: 500px;
}

/* copyright update for Lab 3 */
#copyright {
  position: absolute;
  width: 100vw;        /* changed from 1000px to center text on page */
  text-align: center;
  bottom: 20px;
}

#webmap-reviews {
  text-align: left;
  font-size: 15px;
  postion: relative;
}

